[package]
name = "accless-abe4"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Decentralized CP-ABE Implementation"
homepage.workspace = true

[lib]
name="accless_abe4"
crate-type=["staticlib"]
path = "src/lib.rs"

[dependencies]
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-mnt4-298 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"
sha2 = "0.10.8"
rand = "0.8.4"
criterion = "0.3"
