[package]
name = "abe4"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Decentralized CP-ABE Implementation"
homepage.workspace = true

[lib]
name="abe4"
# rlib needed for tests, staticlib needed for linkage with Accless C++ library
crate-type=["rlib", "staticlib"]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
ark-bls12-377.workspace = true
ark-bls12-381.workspace = true
ark-mnt4-298.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-std = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true, features = ["derive"] }
base64.workspace = true
log.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
