[package]
name = "accless-jwt"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "JWT manipulation library"
homepage.workspace = true

[lib]
name="accless_jwt"
crate-type=["staticlib"]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
rsa = { workspace = true, features = ["sha2"] }
serde.workspace = true
serde_json.workspace = true
x509-parser.workspace = true
