[package]
name = "jwt"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "JWT manipulation library for Accless"
homepage.workspace = true
build = "build.rs"

[lib]
name="jwt"
crate-type=["staticlib"]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
rsa = { workspace = true, features = ["sha2"] }
serde_json.workspace = true
x509-parser.workspace = true
