[package]
name = "edag_verify"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
edag-verify-core = { path = "../../core" }

hex-literal = "0.4"
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default-features = false }
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
