[package]
name = "tless-cloudevent-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
cloudevents-sdk = { git = "https://github.com/cloudevents/sdk-rust.git", revision = "bf45f01602e8216d49461accdde62787c74dbab6", features = ["reqwest", "warp"] }
once_cell = "^1.19.0"
rand = { version = "^0.9.0-alpha.2" }
reqwest = { version = "^0.11" }
serde_json = { version = "^1.0" }
tokio = { version = "^1.0", features = ["full"] }
uuid = { version = "^1.3", features = ["v4"] }
warp = "^0.3"
