[package]
name = "accless-cloudevent-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
cloudevents-sdk = { git = "https://github.com/cloudevents/sdk-rust.git", revision = "fa0aadb31de82956d44fba4b50c6a002d5bd0b7b", features = ["reqwest", "warp"] }
once_cell = "^1.19.0"
rand = { version = "^0.9.0-alpha.2" }
reqwest = { version = "^0.12" }
serde_json = { version = "^1.0" }
tokio = { version = "^1.0", features = ["full"] }
uuid = { version = "^1.3", features = ["v4"] }
warp = "^0.3"
