[package]
name = "accless-word-count-cloudevent-handler"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cloud-Event Handler for the Word Count Workflow"
homepage.workspace = true

[dependencies]
cloudevents-sdk = { workspace = true, features = ["reqwest", "warp"] }
futures-util.workspace = true
minio.workspace = true
once_cell.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }
warp.workspace = true
